--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "http-errors": "^1.7.2",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.17",
     "pug": "^2.0.3",
     "reload": "^2.4.0"
   }
